unpackaged/main/default/objects/filegen__File_Header_Record__c/filegen__File_Header_Record__c.object-meta.xml
<CustomObject>
    <label>File Header Record</label>
    <nameField>
        <displayFormat>HDR-{0000000000}</displayFormat>
        <label>File Header Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Header Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>