unpackaged/main/default/objects/filegen__File_Header_Record__c/fields/filegen__Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>filegen__Creation_Date__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>