unpackaged/main/default/objects/filegen__File_Header_Record__c/fields/filegen__Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>filegen__Creation_Time__c</fullName>
    <label>Creation Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>