unpackaged/main/default/objects/filegen__File_Header_Record__c/fields/filegen__ID_Modifier__c.field-meta.xml
<CustomField>
    <fullName>filegen__ID_Modifier__c</fullName>
    <label>ID Modifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>