unpackaged/main/default/objects/filegen__File_Header_Record__c/fields/filegen__Immediate_Origin__c.field-meta.xml
<CustomField>
    <fullName>filegen__Immediate_Origin__c</fullName>
    <label>Immediate Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>