unpackaged/main/default/objects/filegen__File_Header_Record__c/fields/filegen__Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>filegen__Reference_Code__c</fullName>
    <label>Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>